--- a/example_concept.html
+++ b/example_concept.html
@@ -42,6 +42,7 @@
         const months_short_en = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
         const daysofweek_en = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
         const daysofweek_short_en = ["Sun", "Mon", "Tues", "Wed", "Thu", "Fri", "Sat"];
+        const daysofweek_short_jp = ["日", "月", "火", "水", "木", "金", "土"];  // ～曜日
         const year_jp = "年";  const month_jp = "月";  const day_jp = "日"; 
         
         
