--- a/example_concept.html
+++ b/example_concept.html
@@ -76,8 +76,8 @@
         console.log("for " + (num_of_timepoints - 1) + " , distance is " + (timepoint_list[num_of_timepoints - 1][3]));
 
 
-        // This JS code is in <head> & therfore cannot (yet) refer to HTML elements
-        // Make sure HTML is loaded first, or put JS in <body>
+        // This JS code is in <head> & therfore cannot yet refer to HTML elements
+        // Make sure HTML is loaded first (or rewrite to put this JS in <body>)
         // https://stackoverflow.com/questions/436411/where-should-i-put-script-tags-in-html-markup
         // https://www.javascripttutorial.net/javascript-dom/javascript-domcontentloaded/
         document.addEventListener('DOMContentLoaded', () => {
@@ -89,7 +89,11 @@
                 if (timepoint_list[i][3] == 0) {
                     distance = "";
                 } else {
-                    distance = 'style="margin-bottom:' + timepoint_list[i][3] + 'pt"';
+                    //distance = 'style="margin-bottom:' + timepoint_list[i][3] + 'pt"';
+                    //distance = 'style="height:' + timepoint_list[i][3] + 'pt"';
+                    //distance = 'style="height:' + (timepoint_list[i][4])*100 + 'vh"';
+                    distance = 'style="height:' + (timepoint_list[i][4])*100 + 'mm"';
+                    //distance = 'style="height: calc(' + (timepoint_list[i][4])*100 + 'vh - 3 * var(--spacing)"';
                 }
                 //console.log("for " + i + " , distance is " + (distance) );
                 let li_element = `        <li class="event" data-date="${timepoint_list[i][0]}" ${distance}>\n` 
